--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "toctucproject",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
-    "bootstrap-vue": "^2.23.1",
-    "jquery": "^3.7.1",
-    "jsqr": "^1.4.0",
-    "vue": "^3.3.4",
-    "vue-carousel": "^0.18.0",
-    "vue-qrcode": "^2.2.0",
-    "vue-qrcode-reader": "^5.5.1",
-    "vue-router": "^4.2.5"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.3",
-    "vite": "^4.4.11"
-  }
+    "name": "EzCard",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "vite --host 0.0.0.0",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+        "format": "prettier --write src/"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "axios": "^1.6.2",
+        "bootstrap": "^5.3.2",
+        "bootstrap-vue": "^2.23.1",
+        "jquery": "^3.7.1",
+        "jsqr": "^1.4.0",
+        "vue": "^3.3.4",
+        "vue-carousel": "^0.18.0",
+        "vue-qrcode": "^2.2.0",
+        "vue-qrcode-reader": "^5.5.1",
+        "vue-router": "^4.2.5"
+    },
+    "devDependencies": {
+        "@rushstack/eslint-patch": "^1.3.3",
+        "@vitejs/plugin-vue": "^4.4.0",
+        "@vue/eslint-config-prettier": "^8.0.0",
+        "eslint": "^8.49.0",
+        "eslint-plugin-vue": "^9.17.0",
+        "prettier": "^3.0.3",
+        "vite": "^4.4.11"
+    }
 }
