--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
         "@popperjs/core": "^2.11.8",
         "axios": "^1.6.2",
         "bootstrap": "^5.3.2",
